--- a/estio/style.css
+++ b/estio/style.css
@@ -36,3 +36,10 @@ section#telefone {
 section#redes-sociais {
 
 }
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
